--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@
 # ---------------------------------------------------------
 !.gitignore
 !README.md
+# ---------------------------------------------------------
+# PERSONALIZED SCRIPTS
+# ---------------------------------------------------------
+!.copyToSD.sh
