refactor: update the .gitignore to track the specific bash script to copy the images into the SD

--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,4 @@
 # ---------------------------------------------------------
 # PERSONALIZED SCRIPTS
 # ---------------------------------------------------------
-!.copyToSD.sh
+!*/copyToSD.sh
